<resources>
    <string name="app_name">rapunzel-blog-android</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Rapunzel Blog</string>
    <string name="reg_header">Create New\nAccount</string>
    <string name="reg_first_name_hint">First Name</string>
    <string name="reg_last_name_hint">Last Name</string>
    <string name="reg_email_hint">Email Address</string>
    <string name="reg_username_hint">Username</string>
    <string name="reg_password_hint">Password</string>
    <string name="reg_agreement">By tapping Sign Up you agree to the terms and conditions.</string>
    <string name="login_header">Login</string>
    <string name="no_account_yet_txt">Havn\'t account yet ?</string>
    <string name="register_now_txt">Register Now</string>
    <string name="new_post_txt">New Post</string>
    <string name="new_post_save_txt">Save</string>
    <string name="new_post_clear_txt">Clear</string>
</resources>
